--- a/index.html
+++ b/index.html
@@ -342,13 +342,13 @@
     <div class="footer-contact">
         <h5>Contact</h5>
         <address>
-            53, East Birchwood Ave. Brooklyn, New York 11201, USA.<span>
+            53, East Birchwood Ave. Brooklyn, New York 11201, USA<span>
             <a href="mailto:contact@interno.com">contact@interno.com</a><span>
             <a href="tel:012345678">(123) 456 - 7890</a>
         </address>
     </div>
 </div>
-<div class="copyright">Copyright © Interno | Designed by You</div>
+<div class="copyright">Copyright © Interno | Designed by Gleb</div>
 </footer>
 </body>
 </html>
