--- a/index.html
+++ b/index.html
@@ -86,7 +86,9 @@
                               <small>Call Us Anytime</small>
                           </div>
                       </div>
-                      <a href="#contact" class="btn-secondary">Get Free Estimate</a>
+                      <a href="#contact" class="btn-get-started">
+                        Get Free Estimate
+                        <span class="arrow">→</span> </a>
                   </div>
               </div>
 
@@ -156,7 +158,7 @@
       <img src="./images/sofa.webp" alt="sofa">
       <div class="project-info">
         <div>
-          <h3>Winery Dry Creek Building</h3>
+         <a href="#">Winery Dry Creek Building</a>
           <p>Art Modern</p>
         </div>
         <a href="#" class="project-btn"><i class="fa-solid fa-arrow-right"></i></a>
@@ -167,7 +169,7 @@
       <img src="./images/chair.webp" alt="chair">
       <div class="project-info">
         <div>
-          <h3>Creative Workplace Design</h3>
+          <a href="#">Creative Workplace Design</a>
           <p>Minimalist</p>
         </div>
         <a href="#" class="project-btn"><i class="fa-solid fa-arrow-right"></i></a>
@@ -176,7 +178,7 @@
       <img src="./images/bad.webp" alt="bad">
       <div class="project-info">
         <div>
-          <h3>Bedroom Interior Pot Work</h3>
+            <a href="#">Bedroom Interior Pot Work</a>
           <p>Modern</p>
         </div>
         <a href="#" class="project-btn"><i class="fa-solid fa-arrow-right"></i></a>
@@ -187,7 +189,7 @@
       <img src="./images/lantern.webp" alt="lantern">
       <div class="project-info">
         <div>
-          <h3>Light Ambience Sepia Design</h3>
+            <a href="#">Light Ambience Sepia Design</a>
           <p>Scandinavian</p>
         </div>
         <a href="#" class="project-btn"><i class="fa-solid fa-arrow-right"></i></a>
@@ -221,7 +223,7 @@
                   <span class="tag">Kitchen Design</span>
               </div>
               <div class="blog-body">
-                  <h4>Residential Interior Designer In New York, USA</h4>
+                <a href="#">Residential Interior Designer In New York, USA</a>
                   <div class="blog-footer">
                       <span>November 23, 2021</span>
                       <a href="#"><i class="fas fa-chevron-right"></i></a>
@@ -234,7 +236,7 @@
                   <span class="tag">Living Room</span>
               </div>
               <div class="blog-body">
-                  <h4>How To Choose The Best Wall Art & Decor House?</h4>
+                <a href="#">How To Choose The Best Wall Art & Decor House?</a>
                   <div class="blog-footer">
                       <span>November 23, 2021</span>
                       <a href="#"><i class="fas fa-chevron-right"></i></a>
@@ -247,7 +249,7 @@
                   <span class="tag">Minimalist Interior</span>
               </div>
               <div class="blog-body">
-                  <h4>Tips To Increase The Interior Value Of Your House</h4>
+                <a href="#">Tips To Increase The Interior Value Of Your House</a>
                   <div class="blog-footer">
                       <span>November 23, 2021</span>
                       <a href="#"><i class="fas fa-chevron-right"></i></a>
@@ -260,7 +262,7 @@
                   <span class="tag">Kitchen Design</span>
               </div>
               <div class="blog-body">
-                  <h4>Best Solution For Any Office & Business Interior</h4>
+                <a href="#">Best Solution For Any Office & Business Interior</a>
                   <div class="blog-footer">
                       <span>November 23, 2021</span>
                       <a href="#"><i class="fas fa-chevron-right"></i></a>
@@ -272,7 +274,7 @@
             <span class="tag">Living Room</span>
         </div>
         <div class="blog-body">
-            <h4>Get Solution For Building Construction Work</h4>
+            <a href="#">Get Solution For Building Construction Work</a>
             <div class="blog-footer">
                 <span>November 23, 2021</span>
                 <a href="#"><i class="fas fa-chevron-right"></i></a>
@@ -285,7 +287,7 @@
             <span class="tag">Minimalist Interior</span>
         </div>
         <div class="blog-body">
-            <h4>Attain The Best Finish For The Kitchen Cabinets</h4>
+            <a href="#">Attain The Best Finish For The Kitchen Cabinets</a>
             <div class="blog-footer">
                 <span>November 23, 2021</span>
                 <a href="#"><i class="fas fa-chevron-right"></i></a>
@@ -298,7 +300,7 @@
 
 <section class="cta">
     <div class="container cta-box">
-        <h3>Wanna join the interno?</h3>
+        <h3 div class="join">Wanna join the interno?</h3>
         <p>Contact Us & Get a Free Consultation</p>
         <a href="#contact" class="btn-primary">Connect With Us <i class="fa-solid fa-arrow-right"></i></a>
     </div>
@@ -313,10 +315,10 @@
         </div>
         <p>We are the leading architect and interior design firm in the world.</p>
         <div class="socials">
-            <a href="#"><i class="fab fa-facebook-f"></i></a>
-            <a href="#"><i class="fab fa-twitter"></i></a>
-            <a href="#"><i class="fab fa-linkedin-in"></i></a>
-            <a href="#"><i class="fab fa-instagram"></i></a>
+            <a href="https://www.facebook.com/reg/?locale=uk_UA"target="_blank"><i class="fab fa-facebook-f"></i></a>
+            <a href="https://www.facebook.com/reg/?locale=uk_UA"target="_blank"><i class="fab fa-twitter"></i></a>
+            <a href="https://ua.linkedin.com/"target="_blank"><i class="fab fa-linkedin-in"></i></a>
+            <a href="https://www.instagram.com/"target="_blank"><i class="fab fa-instagram"></i></a>
         </div>
     </div>
     <div class="footer-links">
