--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <header class="site-header">
         <div class="container header-inner">
             <div class="logo">
-                <span class="logo-mark">🏠</span>
+                <img src="./images/icon.webp" alt="internoicon">
                 <span class="logo-text">Interno</span>
             </div>
             <nav class="main-nav">
