--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <header class="site-header">
         <div class="container header-inner">
             <div class="logo">
-                <img src="./images/icon.webp" alt="internoicon">
+                <img src="./images/icon.webp" alt="interno icon">
                 <span class="logo-text">Interno</span>
             </div>
             <nav class="main-nav">
@@ -103,7 +103,7 @@
               <h3>What the People Thinks About Interno</h3>
               <div class="test-cards">
                   <div class="test-card">
-                      <img src="./images/lisa.webp" alt="client" />
+                      <img src="./images/lisa.webp" alt="client lisa" />
                       <div>
                           <h5>Lisa Charlton</h5>
                           <small>New York, USA</small>
@@ -112,7 +112,7 @@
                           extremely professional.</p>
                   </div>
                   <div class="test-card">
-                      <img src="./images/david.webp" alt="client" />
+                      <img src="./images/david.webp" alt="client david" />
                       <div>
                           <h5>David Knight</h5>
                           <small>Sydney, Australia</small>
@@ -122,7 +122,7 @@
                           the quality.</p>
                   </div>
                   <div class="test-card">
-                      <img src="./images/lisa3.webp" alt="client" />
+                      <img src="./images/lisa3.webp" alt="client lisa2" />
                       <div>
                           <h5>Lisa Charlton</h5>
                           <small>Paris, France</small>
@@ -345,7 +345,7 @@
         <h5>Contact</h5>
         <address>
             53, East Birchwood Ave. Brooklyn, New York 11201, USA<span>
-            <a href="mailto:contact@interno.com">contact@interno.com</a><span>
+            <a href="mailto:contact@interno.com">contact@interno.com</a></span>
             <a href="tel:012345678">(123) 456 - 7890</a>
         </address>
     </div>
