--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
 <div class="container footer-grid">
     <div class="footer-about">
         <div class="logo">
-            <span class="logo-mark">🏠</span>
+            <img src="./images/icon.webp" alt="interno icon">
             <span class="logo-text">Interno</span>
         </div>
         <p>We are the leading architect and interior design firm in the world.</p>
