--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
         <p>We are the leading architect and interior design firm in the world.</p>
         <div class="socials">
             <a href="https://www.facebook.com/reg/?locale=uk_UA"target="_blank"><i class="fab fa-facebook-f"></i></a>
-            <a href="https://www.facebook.com/reg/?locale=uk_UA"target="_blank"><i class="fab fa-twitter"></i></a>
+            <a href="https://x.com/?lang=uk"target="_blank"><i class="fab fa-twitter"></i></a>
             <a href="https://ua.linkedin.com/"target="_blank"><i class="fab fa-linkedin-in"></i></a>
             <a href="https://www.instagram.com/"target="_blank"><i class="fab fa-instagram"></i></a>
         </div>
